--- a/css/styles.css
+++ b/css/styles.css
@@ -13,15 +13,14 @@ html {
   background-color: gray;
 }
 
-/* {
+/* * {
   width: 600px;
   margin: 0 auto;
   background-color: #ff9500;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 } */
-
-.img-dbgt {
+*/ .img-dbgt {
   width: 1200px;
   height: 600px;
   background-image: url(../img/dbgt.jpg);
@@ -30,16 +29,27 @@ html {
 .wrapper {
   margin: 0 auto;
   width: 1000px;
+
+  /* position: relative; */
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
 }
 
 .carousel-container {
   width: 300%;
   margin: auto;
   border: 5px solid black;
+  overflow: hidden;
+  /* position: relative; */
 }
 
 .carousel-slide {
   display: flex;
   width: 100px;
-  height: 500px;
+  height: 100px;
+  position: relative;
 }
