--- a/css/styles.css
+++ b/css/styles.css
@@ -1,55 +1,81 @@
-* {
+body {
   margin: 0;
   padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../img/dbgt.jpg);
 }
-*/ h1 {
+h1 {
   margin: 0;
   padding: 20px 0;
   color: #00539f;
   text-shadow: 3px 3px 1px rgb(82, 34, 2);
 }
 
-html {
-  background-color: gray;
-}
-
-/* * {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #ff9500;
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
-} */
-*/ .img-dbgt {
-  width: 1200px;
-  height: 600px;
-  background-image: url(../img/dbgt.jpg);
-}
-
-.wrapper {
-  margin: 0 auto;
-  width: 1000px;
-
-  /* position: relative; */
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-}
-
-.carousel-container {
-  width: 300%;
-  margin: auto;
-  border: 5px solid black;
+.slider {
+  width: 300px;
+  height: 500px;
+  border-radius: 10px;
   overflow: hidden;
-  /* position: relative; */
 }
 
-.carousel-slide {
+.slides {
+  width: 300%;
+  height: 300px;
   display: flex;
-  width: 100px;
-  height: 100px;
-  position: relative;
+}
+
+.slides input {
+  display: none;
+}
+
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img {
+  width: 300px;
+  height: 300px;
+}
+
+/*css manual slide navigation*/
+.navigation-manual {
+  position: absolute;
+  width: 1200px;
+  margin-top: 0px;
+  height: 0px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #4eb8c2;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn-hover {
+  background: rgb(82, 34, 2);
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0;
+}
+#radio2:checked ~ .first {
+  margin-left: -20%;
+}
+#radio3:checked ~ .first {
+  margin-left: -40;
+}
+#radio4:checked ~ .first {
+  margin-left: -60;
 }
