final slider configuration

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,8 @@ h1 {
 /*css manual slide navigation*/
 .navigation-manual {
   position: absolute;
-  width: 1200px;
-  margin-top: 0px;
+  width: 2000px;
+  margin-top: 200px;
   height: 0px;
   display: flex;
   justify-content: center;
@@ -83,4 +83,43 @@ h1 {
 
 #radio5:checked ~ .first {
   margin-left: -0%;
+}
+/* css for automatic navigation;*/
+
+.navigation-auto {
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div {
+  border: 2px soild#40D3DC;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background: #40d3dc;
+}
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background: #40d3dc;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+  background: #40d3dc;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+  background: #40d3dc;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+  background: #40d3dc;
+}
+#radio5:checked ~ .navigation-auto .auto-btn4 {
+  background: #40d3dc;
 }
