--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+
+/*@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100:200:300;400;500;600;&display=swap");
+
+=======
  
 body {
   margin: 0;
@@ -7,18 +11,48 @@ body {
   justify-content: center;
   align-items: center;
   background-image: url(../img/dbgt.jpg);
+}
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  background-size: cover;
+  min-height: 800vh;
+  background: url(../img/dbgt.jpg);
+  background-position: center;
 }
 h1 {
-main
+
   margin: 0;
   padding: 20px 0;
   color: #00539f;
   text-shadow: 3px 3px 1px rgb(82, 34, 2);
 }
+.side-bar {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(15px);
+  width: 290px;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  overflow-y: auto;
+  transition: 0.6s ease;
+  transition-property: left;
+}
 
+
+.side-bar.active {
+  left: 0;
+}
+.side-bar .menu {
+  width: 100%;
+  margin-top: 80px;
+}
 
 .slider {
   width: 300px;
@@ -128,38 +162,162 @@ main
 }
 #radio5:checked ~ .navigation-auto .auto-btn4 {
   background: #40d3dc;
-=======
+}
 html {
   background-color: gray;
 }
 
-/* {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #ff9500;
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
-} */
-
-.img-dbgt {
-  width: 1200px;
-  height: 600px;
-  background-image: url(../img/dbgt.jpg);
+.side-bar .menu .item {
+  position: relative;
+  cursor: pointer;
 }
 
-.wrapper {
-  margin: 0 auto;
-  width: 1000px;
+.side-bar .menu .item a {
+  color: #fff;
+  background: #8621f8;
+  display: block;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 5px 30px;
+  line-height: 60px;
 }
 
-.carousel-container {
-  width: 300%;
-  margin: auto;
-  border: 5px solid black;
+.side-bar .menu .item a:hover {
+  background: #8621f8;
+  transition: 0.3s ease;
 }
 
-.carousel-slide {
-  display: flex;
-  width: 100px;
+.side-bar .menu .item i {
+  margin-right: 15 px;
+}
+
+.side-bar .menu .item a .dropdown {
+  position: absolute;
+  right: 0;
+  margin: 20px;
+  transition: 0.3s ease;
+}
+
+.menu-btn {
+  position: absolute;
+  color: #fff;
+  font-size: 20px;
+  margin: 25px;
+  cursor: pointer;
+}
+.close-btn {
+  position: absolute;
+  color: #fff;
+  font-size: 20px;
+  right: 0;
+  margin: 25px;
+  cursor: pointer;
+}
+.slider {
+  width: 300px;
   height: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.slides {
+  width: 300%;
+  height: 300px;
+  display: flex;
+  overflow: hidden;
+}
+
+.slides input {
+  display: none;
+}
+
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img {
+  width: 300px;
+  height: 300px;
+}
+
+/*css manual slide navigation*/
+.navigation-manual {
+  position: absolute;
+  width: 800px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #4eb8c2;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background: rgb(122, 123, 206);
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0;
+}
+#radio2:checked ~ .first {
+  margin-left: -20%;
+}
+#radio3:checked ~ .first {
+  margin-right: -0%;
+}
+#radio4:checked ~ .first {
+  margin-left: -60%;
+}
+
+#radio5:checked ~ .first {
+  margin-left: -0%;
+}
+/* css for automatic navigation;*/
+
+.navigation-auto {
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div {
+  border: 2px soild#40D3DC;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+  margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background: #40d3dc;
+}
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+  background: #40d3dc;
+}
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+  background: #40d3dc;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+  background: #40d3dc;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+  background: #40d3dc;
+}
+#radio5:checked ~ .navigation-auto .auto-btn4 {
+  background: #40d3dc;
 }
