--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100:200:300;400;500;600;&display=swap");
+@import url(//fonts.googleapis.com/earlyaccess/notosanscham.css);
 
 * {
   margin: 0;
@@ -104,8 +104,8 @@ h1 {
 }
 
 .slide {
-  width: 20%;
-  transition: 2s;
+  width: 15%;
+  transition: 5s;
 }
 
 .slide img {
