--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 
-/*@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100:200:300;400;500;600;&display=swap");
+@import url(//fonts.googleapis.com/earlyaccess/notosanscham.css);
 
-=======
+
  
 body {
   margin: 0;
@@ -12,6 +12,7 @@ body {
   align-items: center;
   background-image: url(../img/dbgt.jpg);
 }
+
 
 * {
   margin: 0;
@@ -26,7 +27,6 @@ body {
   background-position: center;
 }
 h1 {
-
   margin: 0;
   padding: 20px 0;
   color: #00539f;
@@ -44,7 +44,6 @@ h1 {
   transition: 0.6s ease;
   transition-property: left;
 }
-
 
 .side-bar.active {
   left: 0;
@@ -165,6 +164,7 @@ h1 {
 }
 html {
   background-color: gray;
+
 }
 
 .side-bar .menu .item {
@@ -184,7 +184,7 @@ html {
 
 .side-bar .menu .item a:hover {
   background: #8621f8;
-  transition: 0.3s ease;
+  transition: 0.2s ease;
 }
 
 .side-bar .menu .item i {
@@ -213,12 +213,6 @@ html {
   margin: 25px;
   cursor: pointer;
 }
-.slider {
-  width: 300px;
-  height: 500px;
-  border-radius: 10px;
-  overflow: hidden;
-}
 
 .slides {
   width: 300%;
@@ -232,8 +226,8 @@ html {
 }
 
 .slide {
-  width: 20%;
-  transition: 2s;
+  width: 15%;
+  transition: 5s;
 }
 
 .slide img {
@@ -244,10 +238,12 @@ html {
 /*css manual slide navigation*/
 .navigation-manual {
   position: absolute;
-  width: 800px;
-  margin-top: 200px;
+
   display: flex;
+  width: 800px;
   justify-content: center;
+  margin-top: -0px;
+  right: 50px;
 }
 
 .manual-btn {
@@ -255,8 +251,8 @@ html {
   padding: 5px;
   border-radius: 10px;
   cursor: pointer;
-  transition: 1s;
-}
+  transition: 2s;
+
 
 .manual-btn:not(:last-child) {
   margin-right: 40px;
@@ -282,6 +278,7 @@ html {
 #radio5:checked ~ .first {
   margin-left: -0%;
 }
+ 
 /* css for automatic navigation;*/
 
 .navigation-auto {
@@ -289,14 +286,16 @@ html {
   display: flex;
   width: 800px;
   justify-content: center;
-  margin-top: 460px;
+  margin-top: 300px;
+  right: 50px;
 }
 
 .navigation-auto div {
-  border: 2px soild#40D3DC;
+  border: 2px solid #40d3dc;
   padding: 5px;
   border-radius: 10px;
-  transition: 1s;
+  transition: 2s;
+
 }
 
 .navigation-auto div:not(:last-child) {
