--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 
+
 @import url(//fonts.googleapis.com/earlyaccess/notosanscham.css);
 
 
@@ -14,11 +15,13 @@ body {
 }
 
 
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+
 }
 body {
   background-size: cover;
@@ -26,6 +29,7 @@ body {
   background: url(../img/dbgt.jpg);
   background-position: center;
 }
+
 h1 {
   margin: 0;
   padding: 20px 0;
@@ -53,11 +57,25 @@ h1 {
   margin-top: 80px;
 }
 
-.slider {
-  width: 300px;
-  height: 500px;
-  border-radius: 10px;
-  overflow: hidden;
+
+.side-bar .menu .item {
+  position: relative;
+  cursor: pointer;
+}
+
+.side-bar .menu .item a {
+  color: #fff;
+  background: #8621f8;
+  display: block;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 5px 30px;
+  line-height: 60px;
+}
+
+.side-bar .menu .item a:hover {
+  background: #8621f8;
+  transition: 0.2s ease;
 }
 
 .slides {
@@ -72,8 +90,8 @@ h1 {
 }
 
 .slide {
-  width: 20%;
-  transition: 2s;
+  width: 15%;
+  transition: 5s;
 }
 
 .slide img {
@@ -96,7 +114,7 @@ h1 {
   padding: 5px;
   border-radius: 10px;
   cursor: pointer;
-  transition: 1s;
+  transition: 2s;
 }
 
 .manual-btn:not(:last-child) {
@@ -123,49 +141,7 @@ h1 {
 #radio5:checked ~ .first {
   margin-left: -0%;
 }
-/* css for automatic navigation;*/
 
-.navigation-auto {
-  position: absolute;
-  display: flex;
-  width: 800px;
-  justify-content: center;
-  margin-top: 460px;
-}
-
-.navigation-auto div {
-  border: 2px soild#40D3DC;
-  padding: 5px;
-  border-radius: 10px;
-  transition: 1s;
-}
-
-.navigation-auto div:not(:last-child) {
-  margin-right: 40px;
-}
-
-#radio1:checked ~ .navigation-auto .auto-btn1 {
-  background: #40d3dc;
-}
-#radio1:checked ~ .navigation-auto .auto-btn1 {
-  background: #40d3dc;
-}
-#radio2:checked ~ .navigation-auto .auto-btn2 {
-  background: #40d3dc;
-}
-#radio3:checked ~ .navigation-auto .auto-btn3 {
-  background: #40d3dc;
-}
-#radio4:checked ~ .navigation-auto .auto-btn4 {
-  background: #40d3dc;
-}
-#radio5:checked ~ .navigation-auto .auto-btn4 {
-  background: #40d3dc;
-}
-html {
-  background-color: gray;
-
-}
 
 .side-bar .menu .item {
   position: relative;
@@ -228,7 +204,59 @@ html {
 .slide {
   width: 15%;
   transition: 5s;
+
+
+/*css manual slide navigation*/
+.navigation-manual {
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
+  margin-top: -0px;
+  right: 50px;
 }
+
+.manual-btn {
+  border: 2px solid #4eb8c2;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 2s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background: rgb(122, 123, 206);
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0%;
+}
+#radio2:checked ~ .first {
+  margin-left: -20%;
+}
+#radio3:checked ~ .first {
+  margin-right: -40%;
+}
+#radio4:checked ~ .first {
+  margin-left: -60%;
+}
+
+#radio5:checked ~ .first {
+  margin-left: 0%;
+
+}
+/* css for automatic navigation;*/
+
+
+.navigation-auto {
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
 
 .slide img {
   width: 300px;
@@ -295,6 +323,9 @@ html {
   padding: 5px;
   border-radius: 10px;
   transition: 2s;
+   master
+
+
 
 }
 
